--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Hello wasm-pack!</title>
+    <style>
+      h1 {
+        color: royalblue;
+        font-size: 1.3rem;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif,
+          'Helvetica Neue', Helvetica, sans-serif;
+      }
+      sub {
+        color: gray;
+        font-size: 1rem;
+        font-family: Helvetica;
+      }
+    </style>
   </head>
   <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <noscript
+      >This page contains webassembly and javascript content, please enable javascript in
+      your browser.</noscript
+    >
     <script src="./bootstrap.js"></script>
+    <h1>Conway´s</h1>
+    <sub>Game of Life in WASM & Rust 🦀</sub>
+    <div>
+      <code>code</code>
+    </div>
   </body>
 </html>
