--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </style>
   </head>
   <body>
-    <noscript
-      >This page contains webassembly and javascript content, please enable javascript in
-      your browser.</noscript
-    >
+    <noscript>
+      This page contains webassembly and javascript content, please enable javascript in
+      your browser.
+    </noscript>
     <script src="./bootstrap.js"></script>
     <h1>Conway´s</h1>
     <sub>Game of Life in WASM & Rust 🦀</sub>
